--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "start": "ts-node src/index.ts",
     "lint": "eslint src/**/*.ts --fix",
     "dev": "nodemon src/index.ts",
-    "seed": "ts-node src/seeds/index.ts"
+    "seed": "ts-node src/seeds/index.ts",
+    "build": "tsc", 
+    "prestart": "npm run build",
+    "predev": "npm run build",
+    "production": "node dist/index.js"
   },
   "author": "",
   "license": "ISC",
